# spell-thingy

./: .eslintrc.json  README.md  package.json  pnpm-lock.yaml  vite.config.ts
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
src/: App.tsx  main.tsx  types.ts
src/assets/: wordlist.txt
src/components/Grid/: Grid.tsx  GridItem.tsx
src/components/Options/: Options.tsx
src/components/Results/: Results.tsx
src/components/SideThing/: SideThing.tsx
src/context/: GridContext.tsx  GridManager.ts
src/hooks/: useInitGrid.ts
src/scss/base/: _globals.scss
src/utils/: constants.ts  getLetterByRowCol.ts  getRandomGrid.ts  getValue.ts  memoize.ts  uuidv4.ts  vectorSheet.ts
