[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
uuid = { version = "1.3.0", features=["v4", "js"] }
rand = "0.8.5"
wasm-bindgen = {version = "0.2.84",  features = ["serde-serialize"] }
serde ={ version = "1.0.152", features = ["derive"]}
serde_json="1.0.92"
js-sys = "0.3.56"


[dependencies.web-sys]
features = ["console"]
